--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Expenture Form VG"
+      name="mapbox-demo"
       content="Build a trip route"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Expenture Form VG</title>
+    <title>Mapbox-Demo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
